--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 /.env
 
 /env
+
 __pycache__/
+controller/__pycache__/
+database/__pycache__/
+helpers/__pycache__/
+model/__pycache__/
 
 /view/node_modules
 
