--- a/frontend/view/package.json
+++ b/frontend/view/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start --port 8080",
-    "lint": "next lint"
-  },
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
+   },
   "dependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
@@ -18,5 +20,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
-  } 
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.15.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "ts-node": "^10.9.2"
+  }
 }
